Applications/echo-server/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-server-deployment
  namespace: testing
spec:
  replicas: 4
  selector:
    matchLabels:
      app: echo-server-deployment
  template:
    metadata:
      labels:
        app: echo-server-deployment
        version: 0.3.5
    spec:
      containers:
        - name: echo-server
          image: jmalloc/echo-server:0.3.5
          ports:
            - name: http-port
              containerPort: 8080
          resources:
            requests:
              memory: "40Mi"
              cpu: "0.010"
            limits:
              memory: "50Mi"
              cpu: "0.020"
