Applications/echo-server/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echo-server-virtualservice
  namespace: testing
spec:
  hosts:
    - echo-server.$DOMAIN
  gateways:
    - istio-custom/default-gateway
  http:
    - route:
        - destination:
            host: echo-server-service
          weight: 100
